// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option should work ("function"): errors 1`] = `Array []`;

exports[`"filename" option should work ("function"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.custom.worker.js\\");
}
"
`;

exports[`"filename" option should work ("function"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work ("function"): warnings 1`] = `Array []`;

exports[`"filename" option should work ("string"): errors 1`] = `Array []`;

exports[`"filename" option should work ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.custom.worker.js\\");
}
"
`;

exports[`"filename" option should work ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work ("string"): warnings 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" default value option: errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" default value option: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.worker.js\\");
}
"
`;

exports[`"filename" option should work and respect the "output.filename" default value option: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work and respect the "output.filename" default value option: warnings 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option ("function"): errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option ("function"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.custom.worker.js\\");
}
"
`;

exports[`"filename" option should work and respect the "output.filename" option ("function"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work and respect the "output.filename" option ("function"): warnings 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option ("string"): errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"worker.custom.worker.js\\");
}
"
`;

exports[`"filename" option should work and respect the "output.filename" option ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work and respect the "output.filename" option ("string"): warnings 1`] = `Array []`;
